--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rpg",
+  "name": "@pizzalegends/client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,10 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
